# bromine

./: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
bromine_ecs/: Cargo.toml
bromine_ecs/src/: component.rs  entity.rs  hash.rs  lib.rs  resource.rs  world.rs
bromine_engine/: Cargo.toml
bromine_engine/resources/monkey/: license.txt  scene.gltf
bromine_engine/src/: lib.rs  query.rs
bromine_engine/src/render/: buffer_object.rs  debug_callback.rs  element.rs  prelude.rs  vertex.rs
bromine_engine/src/render/phong_lightning/: light.rs  material.rs
bromine_engine/src/render/scene/: gl_mesh.rs  gl_model.rs
bromine_engine/src/render/shader/: gl_uniform.rs  program.rs
bromine_macro/: Cargo.toml
bromine_macro/src/: lib.rs
demo/: Cargo.toml
demo/src/: application.rs  ecs.rs  main.rs
demo/src/app/: application.rs  mod.rs  window_event.rs
demo/src/ecs/: components.rs  resources.rs
demo/src/ecs/systems/: camera.rs  mod.rs  render.rs
demo/src/shaders/: Scene.frag  Scene.vert  Triangle.frag  Triangle.vert
engine/: Cargo.toml  README.md
engine/src/: ecs.rs  game.rs  lib.rs  query.rs
gl/: Cargo.toml  build.rs
gl-headless/: Cargo.toml
gl-headless/src/: lib.rs
gl/src/: lib.rs
lib/gl/: Cargo.toml  build.rs
src/: application.rs  application_ecs.rs  constants.rs  main.rs  types.rs
src/camera/: camera_control_system.rs  camera_state.rs  camera_system.rs  components.rs  mod.rs  resources.rs  systems.rs
src/collision/: __speculative_contacts_system.rs  collider_cache.rs  collider_component.rs  collider_update_system.rs  collision_detection_system.rs  collision_handle_system.rs  mod.rs
src/components/: mod.rs  renderable.rs  transform.rs
src/ecs/: component.rs  entity.rs  mod.rs  query.rs  storage.rs  world.rs
src/graphics/: context.rs  draw_functions.rs  mesh.rs  mod.rs
src/legacy_code/: application.rs  application_rewrite.rs  cfg_loader.rs  collision.rs  free_flight_camera.rs  mesh_loader.rs  realistic_camera.rs  skybox.rs
src/lib/: ecs.rs  graphics.rs  hash.rs  lib.rs  query.rs
src/opengl_backend/: shader.rs
(+60 files in other folders)
