[package]
name = "opengl-rust-engine"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "dying-light-3"
path = "src/main.rs"

[dependencies]
gl = { path = "lib/gl" }
glutin = { version = "0.32.3", features = ["glx", "egl", "wgl"] }
glutin-winit = "0.5.0"
nalgebra-glm = "0.19.0"
obj-rs = "0.7.1"
raw-window-handle = "0.6.2"
winit = "0.30.10"
stb_image = "0.3.0"
serde_json = "1.0.140"
ron = "0.10.1"
glam = "0.30.3"
num-traits = "0.2.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
