[package]
name = "opengl-ecs-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gravity-sim"
path = "src/bin/gravity-sim/main.rs"

[[bin]]
name = "game"
path = "src/bin/game/main.rs"

[lib]
name = "engine"
path = "src/lib/lib.rs"

[dependencies]
gl = { path = "lib/gl" }
glutin = { version = "0.32.3", features = ["glx", "egl", "wgl"] }
glutin-winit = "0.5.0"
nalgebra-glm = "0.19.0"
obj-rs = "0.7.1"
raw-window-handle = "0.6.2"
winit = "0.30.10"
stb_image = "0.3.0"
serde_json = "1.0.140"
glam = "0.31.0"
num-traits = "0.2.19"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
nutype = "0.6.2"
bytemuck = { version = "1.24.0", features = ["derive"] }
anyhow = "1.0.100"
