[package]
name = "bromine_engine"
version = "0.1.0"
edition = "2024"

[features]
debug = ["dep:tracing"]

[dependencies]
bromine_macro = { path = "../bromine_macro" }
bromine_ecs = { path = "../bromine_ecs" }
winit = "0.30.10"
anyhow = "1.0.100"
gl = { path = "../gl" }
tracing = { version = "0.1.44", optional = true }
gltf = "1.4.1"
mint = "0.5.9"

[dev-dependencies]
gl_headless = { path = "../gl-headless" }
