[package]
name = "demo"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.32.1"
glutin = "0.32.3"
glutin-winit = "0.5.0"
raw-window-handle = "0.6.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
winit = "0.30.13"
engine = { path = "../engine", features = ["debug"] }
gl = { path = "../gl" }
anyhow = "1.0.102"
